--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phaser-3-typescript-4-webpack-5-template",
+  "name": "phaser-3-react-17-typescript-4-webpack-5-template",
   "version": "0.0.1",
-  "description": "A sample project using Phaser 3 and TypeScript 4",
+  "description": "A sample project using Phaser 3, React 17 and TypeScript 4",
   "main": "src/main.ts",
   "author": "blopa",
   "license": "MIT",
@@ -12,19 +12,20 @@
     "lint": "eslint src",
     "bump": "ncu -u -t minor"
   },
-  "dependencies": {
-    "phaser": "^3.54.0"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^5.2.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^29.0.0",
     "eslint-plugin-unused-imports": "^1.1.0",
     "html-webpack-plugin": "^5.3.1",
@@ -37,5 +38,10 @@
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "phaser": "^3.54.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
