--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "phaser-3-react-17-typescript-4-webpack-5-template",
-  "version": "0.0.1",
-  "description": "A sample project using Phaser 3, React 17 and TypeScript 4",
-  "main": "src/main.ts",
-  "author": "blopa",
-  "license": "MIT",
-  "private": false,
-  "scripts": {
-    "build": "webpack --env=production",
-    "dev": "webpack serve --env=development",
-    "lint": "eslint src",
-    "bump": "ncu -u -t minor"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
-    "babel-eslint": "^10.1.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.1",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-unicorn": "^29.0.0",
-    "eslint-plugin-unused-imports": "^1.1.1",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.4.1",
-    "npm-check-updates": "^11.4.1",
-    "prettier": "^2.2.1",
-    "ts-loader": "^8.1.0",
-    "typescript": "^4.2.4",
-    "typescript-tslint-plugin": "^1.0.1",
-    "webpack": "^5.31.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "phaser": "^3.54.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+    "name": "phaser-3-react-17-typescript-4-webpack-5-template",
+    "version": "0.0.1",
+    "description": "A sample project using Phaser 3, React 17 and TypeScript 4",
+    "main": "src/Main.tsx",
+    "author": "blopa",
+    "license": "MIT",
+    "private": false,
+    "scripts": {
+        "build": "webpack --env=production",
+        "dev": "webpack serve --env=development",
+        "lint": "eslint src",
+        "bump": "ncu -u -t minor"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.21.0",
+        "@typescript-eslint/parser": "^4.21.0",
+        "babel-eslint": "^10.1.0",
+        "copy-webpack-plugin": "^8.1.1",
+        "css-loader": "^5.2.1",
+        "eslint": "^7.24.0",
+        "eslint-config-airbnb-typescript": "^12.3.1",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-unicorn": "^29.0.0",
+        "eslint-plugin-unused-imports": "^1.1.1",
+        "html-webpack-plugin": "^5.3.1",
+        "mini-css-extract-plugin": "^1.4.1",
+        "npm-check-updates": "^11.4.1",
+        "prettier": "^2.2.1",
+        "ts-loader": "^8.1.0",
+        "typescript": "^4.2.4",
+        "typescript-tslint-plugin": "^1.0.1",
+        "webpack": "^5.31.2",
+        "webpack-cli": "^4.6.0",
+        "webpack-dev-server": "^3.11.2"
+    },
+    "dependencies": {
+        "phaser": "^3.54.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    }
 }
