--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "dependencies": {
         "phaser": "^3.54.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.3",
+        "redux": "^4.0.5"
     }
 }
