--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "build": "webpack --env=production",
         "dev": "webpack serve --env=development",
+        "backend": "node server.js",
         "lint": "eslint src",
         "bump": "ncu -u -t minor"
     },
@@ -28,10 +29,12 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unicorn": "^32.0.1",
         "eslint-plugin-unused-imports": "^1.1.1",
+        "express": "^4.17.1",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.6.0",
         "npm-check-updates": "^11.5.13",
         "prettier": "^2.3.0",
+        "socket.io": "^4.1.1",
         "ts-loader": "^9.1.2",
         "typescript": "^4.2.4",
         "typescript-tslint-plugin": "^1.0.1",
@@ -44,6 +47,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
-        "redux": "^4.1.0"
+        "redux": "^4.1.0",
+        "socket.io-client": "^4.1.1"
     }
 }
